--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Button Effect</title>
 </head>
 
-<body style="border: 3px solid green;">
+<body >
     <button onmouseleave="a1()">Click Me</button>
     <button onmouseleave="a1()">Click Me</button>
     <button onmouseleave="a1()">Click Me</button>
